# ego

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE.bazel  ast.cpp  ast.h  build  builtins.cpp  builtins.h  common.h  ego.cpp  eval.cpp  eval.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  tokens.cpp  tokens.h  utils.cpp  utils.h
examples/: fact.ego  hello.ego  hello.ws  pong.ego  pong.ws  test.ego  test.ws
raylib/: BUILD.bazel
