cc_library(
    name = "ego_lib",
    srcs = ["//:srcs"],
    hdrs = ["//:hdrs"],
)

cc_binary(
    name = "ego",
    srcs = ["main.cpp"],
    copts = ["-std=c++20"],
    deps = ["//:ego_lib", "//raylib"],
)

filegroup(
    name = "hdrs",
    srcs = glob(["*.h"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob(["*.cpp"], exclude=["ego.cpp"]),
    visibility = ["//visibility:public"],
)
