cc_library(
    name = "whimsia_lib",
    srcs = ["//:srcs"],
    hdrs = ["//:hdrs"],
    deps = ["//raylib:raylib_hdrs"],
    copts = ["-std=c++20"], 
)

cc_binary(
    name = "whimsia",
    srcs = ["main.cpp"],
    copts = ["-std=c++20"],
    deps = ["//:whimsia_lib", "//raylib:raylib"],
)

filegroup(
    name = "hdrs",
    srcs = glob(["*.h"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob(["*.cpp"]),
    visibility = ["//visibility:public"],
)
